# GameAIEngine

./: CMakeLists.txt  README.md
include/engine/: circle.h  defines.h  entity.h  following_circle.h  game.h  kinematic_arrive_circle.h  kinematic_flee_circle.h  kinematic_seek_circle.h  kinematic_wander_triangle.h  mouse.h  shape.h  steering_flee_triangle.h  steering_seek_triangle.h  steering_triangle.h  triangle.h  util.h
include/math/: vector.h
include/physics/: kinematic.h  kinematic_arrive.h  kinematic_flee.h  kinematic_seek.h  kinematic_wander.h  motion_output.h  orientation.h  steering_behavior.h  steering_flee.h  steering_output.h  steering_seek.h
src/: main.cpp
src/engine/: circle.cpp  following_circle.cpp  game.cpp  kinematic_arrive_circle.cpp  kinematic_flee_circle.cpp  kinematic_seek_circle.cpp  kinematic_wander_triangle.cpp  mouse.cpp  shape.cpp  steering_flee_triangle.cpp  steering_seek_triangle.cpp  steering_triangle.cpp  triangle.cpp  util.cpp
src/math/: vector.cpp
src/physics/: kinematic.cpp  kinematic_arrive.cpp  kinematic_flee.cpp  kinematic_seek.cpp  kinematic_wander.cpp  motion_output.cpp  orientation.cpp  steering_behavior.cpp  steering_flee.cpp  steering_output.cpp  steering_seek.cpp
